--- a/writeup/category-theory.tex
+++ b/writeup/category-theory.tex
@@ -477,7 +477,7 @@ The following class of functors are especially important.
 Since isomorphic objects are meant to look identical to all the machinery of
 category theory, we should expect the following result.
 
-\begin{prop}
+\begin{prop}\label{thm:functors-preserve-iso}
   Let $F: \cat{C}\to\cat{D}$ be a functor and let $f: x\to y$ be an isomorphism
   in $\cat{C}$. Then $Ff: Fx\to Fy$ is an isomorphism.
 \end{prop}
